made html boilerplate better

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <h1> Testing!!!</h1>
+        <meta charset="utf-8">
+        <title>Teste Site</title>
     </head>
+    <body>
+        <h1>site for testing html</h1>
+    </body>
 </html>
