Fixed spelling of Teste Site to Test Site in <title>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Teste Site</title>
+        <title>Test Site</title>
     </head>
     <body>
         <h1>site for testing html</h1>
