--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- headers are used for meta data (things only the server will see) -->
     <head>
         <meta charset="utf-8">
         <title>Test Site</title>
