added examples of using bold and italics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>site for testing html</h1>
-        <h2>using micro text editor!!!<h2>
+        <h2>using micro text editor!!!</h2>
+        <p> Paragraph (p) </p>
+        <p><em> Italics (em) </em></p>
+        <p><strong> Bold (strong) </strong><p>
     </body>
 </html>
