--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <p> Paragraph (p) </p>
         <p><em> Italics (em) </em></p>
         <p><strong> Bold (strong) </strong><p>
-        <a href="https://www.google.com"> google!!! </a>
+        <a href="https://www.google.com" target="_blank"  > google!!! </a>
     </body>
 </html>
