added some headers and text

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <p><em> Italics (em) </em></p>
         <p><strong> Bold (strong) </strong><p>
         <a href="https://www.google.com" target="_blank"  > google!!! </a>
+        <h1>big header</h1>
+        <h2>smaller header</h2>
+        <p>text text text text</p>
     </body>
 </html>
+ 
