added unordered and ordered lists

--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
         <h1>big header</h1>
         <h2>smaller header</h2>
         <p>text text text text</p>
+        <h2> unordered list (ul)</h2>
         <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <li>red</li>
+            <li>green</li>
+            <li>blue</li>
         </ul>
+        <h2>ordered list (ol)</h2>
+        <ol>
+            <li>red</li>
+            <li>green</li>
+            <li>blue</li>
+        </ol>
     </body>
 </html>
  
