--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <h1>site for testing html</h1>
-        <h2>using micro text editor!!!</h2>
+        <img src="./assets/githublogo.png">
+        <a href="https://github.com/PlasmaZen/BRtestsite.github.io" target="_blank" rel="noopener noreferrer">link to github page</a>
         <p> Paragraph (p) </p>
         <p><em> Italics (em) </em></p>
         <p><strong> Bold (strong) </strong><p>
@@ -27,15 +28,6 @@
             <li>green</li>
             <li>blue</li>
         </ol>
-        <ul>
-            <li>a<li>
-            <ul>
-                <li>descending</li>
-                <ul>
-                    <li>list!</li>
-                </ul>
-            </ul>
-        </ul>
     </body>
 </html>
  
