--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <!-- headers are used for meta data (things only the server will see) -->
     <head>
-        <meta charset="utf-8">
-        <title>Test Site</title>
+        <meta charset="utf-8" >
+        <title>Test Site</title >
+        <link rel="stylesheet" type="text/css" href="styles.css" >
     </head>
     <body>
         <h1>site for testing html</h1>
-        <img src="./assets/githublogo.png">
+        <img src="./assets/githublogo.png" width="100" height="100">
         <a href="https://github.com/PlasmaZen/BRtestsite.github.io" target="_blank" rel="noopener noreferrer">link to github page</a>
         <p> Paragraph (p) </p>
         <p><em> Italics (em) </em></p>
@@ -28,6 +29,7 @@
             <li>green</li>
             <li>blue</li>
         </ol>
+        <div class="testing">brown!</div>
     </body>
 </html>
  
