--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>site for testing html</h1>
-        <img src="./assets/githublogo.png" width="100" height="100">
+        <img src="./assets/githublogo.png">
         <a href="https://github.com/PlasmaZen/BRtestsite.github.io" target="_blank" rel="noopener noreferrer">link to github page</a>
         <p> Paragraph (p) </p>
         <p><em> Italics (em) </em></p>
